# ts-export-usage-annotator

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SKILL.md  entities.json  mempalace.yaml
skill/: SKILL.md
src/: annotate.rs  cli.rs  collect_exports.rs  collect_imports.rs  main.rs  parser_mod.rs  resolve.rs  tsconfig.rs
tests/fixtures/ns-test-project/: tsconfig.json
tests/fixtures/ns-test-project/src/: calc.ts  math.ts
tests/fixtures/reexport-test-project/src/: app.ts  service.ts
tests/fixtures/ts-test-project/src/: app.ts  lib.ts
