[package]
name = "ts-export-usage-annotator"
version = "0.1.0"
edition = "2021"

[dependencies]
swc_common = "21"
swc_ecma_ast = "23"
swc_ecma_parser = "39"
swc_ecma_visit = "23"
swc_atoms = "9"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json_comments = "0.2"
globset = "0.4"
walkdir = "2"
pathdiff = "0.2"
anyhow = "1"
